--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,11 @@
 [build]
   # No build command needed - this is a static site
-  publish = "app"
+  publish = "interactive-paper"
   command = "echo 'No build required - static HTML/JS'"
+
+[build.environment]
+  # Explicitly set to avoid Python version issues
+  PYTHON_VERSION = "3.12"
 
 [[redirects]]
   from = "/*"
