--- a/netlify.toml
+++ b/netlify.toml
@@ -1,11 +1,12 @@
 [build]
-  # No build command needed - this is a static site
-  publish = "interactive-paper"
+  # Run the build from the publish directory so Netlify doesn't pick up tool/version files
+  # (e.g., .tool-versions/.mise.toml/.python-version) from the repo root.
+  base = "interactive-paper"
+  publish = "."
   command = "echo 'No build required - static HTML/JS'"
 
-[build.environment]
-  # Explicitly set to avoid Python version issues
-  PYTHON_VERSION = "3.12"
+  # Ensure Python selection is explicit in a way Netlify documents/supports.
+  environment = { PYTHON_VERSION = "3.12" }
 
 [[redirects]]
   from = "/*"
