Fix mathematical accuracy and improve clarity
- Correct Schwarz P surface definition (cos x + cos y + cos z = 0)
- Fix terminology: '3D torus' → 'torus (2D surface embedded in 3D)'
- Fix missing parenthesis in electron bands sentence
- Add 'reciprocal space' clarification for diffraction symmetries
- Update NTC reference with fallback note
- Improve forbidden symmetry examples (5-, 8-, 10-, 12-fold)
- Add clear wave formula: ρ(x,y) = Σᵢ Aᵢ cos(qᵢ·r + φᵢ)
- Clarify geodesic as 'locally shortest path'

--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,14 @@
 {
   "buildCommand": "echo 'No build required'",
-  "outputDirectory": "docs",
+  "outputDirectory": ".",
   "framework": null,
-  "rewrites": [
+  "routes": [
     {
-      "source": "/(.*)",
-      "destination": "/docs/$1"
+      "src": "/(.*)",
+      "dest": "/docs/$1"
+    },
+    {
+      "handle": "filesystem"
     }
   ]
 }
